# gnosis

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
configs/: README.md  default.yaml
configs/runs/: run1.yaml  run10.yaml  run11.yaml  run12.yaml  run13.yaml  run14.yaml  run15.yaml  run16.yaml  run17.yaml  run18.yaml  run19.yaml  run2.yaml  run20.yaml  run21.yaml  run22.yaml  run23.yaml  run3.yaml  run4.yaml  run5.yaml  run6.yaml  run7.yaml  run8.yaml  run9.yaml
docs/: BENCHMARKS.md  CAPABILITIES.md  README.md  architecture.md  configuration.md  data-model.md  development.md  getting-started.md  operations.md  provider-surface.md  security.md
src/agents_memory/: auth.py  backend.py  event_facts.py  graph_context.py  graph_cypher.py  graph_events.py  graph_probe.py  graph_schema.py  graph_store.py  graph_types.py  graph_upsert.py  graph_upsert_cypher.py  graph_upsert_ids.py  graph_upsert_values.py  main.py  models.py  redaction.py  settings.py  skill_registry.py
src/gnosis/: auth.py  backend.py  backend_protocols.py  bridge_traversal.py  context_assembly.py  dedup_consolidation.py  entity_graph.py  entity_traversal.py  event_facts.py  extraction_worker.py  fact_extraction.py  federation.py  graph_activity.py  graph_context.py  graph_cypher.py  graph_events.py  graph_memory_store.py  graph_probe.py  graph_query_execution.py  (+27 more)
tests/: conftest.py  test_api.py  test_backend.py  test_bridge_traversal.py  test_config.py  test_entity_graph.py  test_entity_grouped_rendering.py  test_extraction_worker.py  test_fact_extraction.py  test_federation.py  test_graph_backend.py  test_graph_query_qa.py  test_graph_query_store.py  test_graph_semantic_cypher.py  test_graph_traversal.py  test_graph_vector_context.py  test_hybrid_retrieval.py  test_long_term_context.py  test_mcp_server.py  test_memory_filters.py  test_memory_provider.py  test_query_router.py  test_reasoning_api.py  test_recall_filter.py  test_redaction.py  test_reranker.py  test_scoped_dense_retrieval.py  test_sdk_capabilities.py  test_skills.py  test_supersession.py
(+7 files in other folders)
