[project]
name = "gnosis"
version = "0.1.0"
description = "Scoped graph/vector memory API for homelab agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "neo4j-agent-memory[litellm]==0.5.0",
    "neo4j>=5.28.0",
    "orjson>=3.11.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.35.0",
    "httpx2[http2,brotli,zstd]>=0.28.0",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["uv_build>=0.11.25,<0.12"]
build-backend = "uv_build"

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.13"
pythonPlatform = "All"
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]
reportUnusedCallResult = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedVariable = "error"
reportMissingParameterType = "error"
reportPrivateUsage = "error"
reportUnusedFunction = "none"

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "D203",
    "D213",
    "CPY001",
    "FBT001",
    "FBT002",
    "TD002",
    "TD003",
    "FIX002",
    "D",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "S105",
    "ARG",
    "PLR2004",
    "SLF001",
    "D",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Header",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = [
    "error",
    "ignore:Support for class-based `config` is deprecated:DeprecationWarning:neo4j_agent_memory.*",
]
